Fix width overflow, adjust asides for mobile vs desktop

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -193,6 +193,7 @@ body {
     "right"
     "f";
     min-height: 100vh;
+    gap: 0px;
 }
 
 header {
@@ -225,9 +226,13 @@ main {
 #left-top-col, #left-bottom-col, #right-col {
     background-color: var(--color-bg-primary);
     border: 2px dashed var(--color-accent-2);
-    margin: 1rem;
+    margin: 1rem auto;
     padding: 1rem;
     height: fit-content;
+    width: 100%;
+    /* 10px is the border width of main */
+    max-width: min(80ch, calc(100vw - 10px));
+
 }
 
 footer {
@@ -675,7 +680,7 @@ main.splash {
 }
 
 #linkback-button div {
-    width: 36ch;
+    max-width: 36ch;
 }
 
 #changelog-box {
@@ -773,7 +778,7 @@ main.splash {
 
 @media screen and (min-width: 600px) {
     main {
-        width: 80ch;
+        max-width: 80ch;
     }
 
     #navbar {
@@ -800,6 +805,11 @@ main.splash {
             / 1fr 80ch 1fr;
         align-content: start;
     }
+    
+    #left-top-col, #left-bottom-col, #right-col {
+        margin: 1rem;
+        width: unset;
+    }
 
     #left-top-col {
         border-bottom: 0;
@@ -812,6 +822,8 @@ main.splash {
         margin-top: 0;
         padding-top: 0;
     }
+
+
 }
 
 
